--- a/src/assets/scss/layout/pages/_slide.scss
+++ b/src/assets/scss/layout/pages/_slide.scss
@@ -487,10 +487,10 @@ img {
   --ztc-text-text-1: #fff;
   --ztc-text-text-2: #514F4C;
   --ztc-text-text-3: #181713;
-  --ztc-text-text-4: #FBD459;
+  --ztc-text-text-4: #1B4571;
   --ztc-text-text-5: #72706C;
-  --ztc-text-text-6: #01715D;
-  --ztc-text-text-7: #FFA41C;
+  --ztc-text-text-6: #1B4571;
+  --ztc-text-text-7: #1B4571;
   --ztc-text-text-8: #170822;
   --ztc-text-text-9: #514E53;
   --ztc-text-text-10: #56227F;
@@ -501,8 +501,8 @@ img {
   --ztc-text-text-15: #00263A;
   --ztc-text-text-16: #504F4E;
   --ztc-bg-bg-1: #fff;
-  --ztc-bg-bg-2: #01715D;
-  --ztc-bg-bg-3: #FBD459;
+  --ztc-bg-bg-2: #1B4571;
+  --ztc-bg-bg-3: #1B4571;
   --ztc-bg-bg-4: #F6F4EE;
   --ztc-bg-bg-5: #FBF7FF;
   --ztc-bg-bg-6: #E7E6EA;
@@ -8148,7 +8148,7 @@ section.vl-testimonial4.vl-testimonial-inner.testimonial2.sp2 .smarrow.abarow.ar
   background-position: center;
   background-repeat: no-repeat;
   // background-color: #ddd;
-  background: url('/src/assets/img/banner/vl-banner-1.1.png') no-repeat center;
+  background: url('/src/assets/img/Fincas/home/Hero1.jpg') no-repeat center;
   background-size: cover;
   width: 100%;
   position: relative;
