Update HomePage with Contact Us Integration

--- a/src/assets/scss/layout/pages/_slide.scss
+++ b/src/assets/scss/layout/pages/_slide.scss
@@ -497,7 +497,7 @@ img {
   --ztc-text-text-11: #0E082B;
   --ztc-text-text-12: #0085FF;
   --ztc-text-text-13: #46475F;
-  --ztc-text-text-14: #FF5F27;
+  --ztc-text-text-14: #1B4571;
   --ztc-text-text-15: #00263A;
   --ztc-text-text-16: #504F4E;
   --ztc-bg-bg-1: #fff;
